add update some styles 2

--- a/login.html
+++ b/login.html
@@ -57,27 +57,27 @@
                 <ul class="list" id="contact-list">
                     <li class="list_item">
                         <a href="#" class="contact-icon">
-                            <img src="./img/contact-icon/facebook-fill.svg" alt="">
+                            <img src="./img/contact-icon/facebook-fill.svg" alt="social icon"  class="social-icon">
                         </a>
                     </li>
                     <li class="list_item">
                         <a href="#" class="contact-icon">
-                            <img src="./img/contact-icon/instagram-line.svg" alt="">
+                            <img src="./img/contact-icon/instagram-line.svg" alt="social icon"  class="social-icon">
                         </a>
                     </li>
                     <li class="list_item">
                         <a href="#" class="contact-icon">
-                            <img src="./img/contact-icon/linkedin-fill.svg" alt="">
+                            <img src="./img/contact-icon/linkedin-fill.svg" alt="social icon"  class="social-icon">
                         </a>
                     </li>
                     <li class="list_item">
                         <a href="#" class="contact-icon">
-                            <img src="./img/contact-icon/telegram-fill.svg" alt="">
+                            <img src="./img/contact-icon/telegram-fill.svg" alt="social icon"  class="social-icon">
                         </a>
                     </li>
                     <li class="list_item">
                         <a href="#" class="contact-icon">
-                            <img src="./img/contact-icon/whatsapp-line.svg" alt="">
+                            <img src="./img/contact-icon/whatsapp-line.svg" alt="social icon"  class="social-icon">
                         </a>
                     </li>
                 </ul>
