--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <option class="color-info_option" value="shades">ظلال ألوان</option>
                         <option class="color-info_option" value="square">ألوان مربعة</option>
                     </select>
+                    <input type="number" class="palettes-num color-info" placeholder="ادخل عدد التنسيقات">
                     <select class="color-num color-info">
                         <option class="color-info_option" value="">اختر عدد الألوان</option>
                         <option class="color-info_option" value="2">لونين</option>
@@ -88,6 +89,7 @@
                         <option class="color-info_option" value="shades">ظلال ألوان</option>
                         <option class="color-info_option" value="square">ألوان مربعة</option>
                     </select>
+                    <input type="number" class="ready-palettes-num color-info" placeholder="ادخل عدد التنسيقات">
                     <select class="ready-color-num color-info">
                         <option class="color-info_option" value="">اختر عدد الألوان</option>
                         <option class="color-info_option" value="2">لونين</option>
@@ -104,6 +106,24 @@
                 </div>
                 <div class="palettes"></div>
                 <div class="download-palettes"></div>
+            </div>
+            <div class="colors-search">
+                <h2 class="search-title">للبحث عن لون معين:</h2>
+                <form class="form-search">
+                    <div class="search">
+                        <input type="text" class="search__input" placeholder="ادخل الاسم او الصورة او RGB او CMYK او غيرها">
+                        <button class="search__button">
+                            <div class="search__icon">
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 20 20">
+                                <title>magnifying-glass</title>
+                                <path d="M17.545 15.467l-3.779-3.779c0.57-0.935 0.898-2.035 0.898-3.21 0-3.417-2.961-6.377-6.378-6.377s-6.186 2.769-6.186 6.186c0 3.416 2.961 6.377 6.377 6.377 1.137 0 2.2-0.309 3.115-0.844l3.799 3.801c0.372 0.371 0.975 0.371 1.346 0l0.943-0.943c0.371-0.371 0.236-0.84-0.135-1.211zM4.004 8.287c0-2.366 1.917-4.283 4.282-4.283s4.474 2.107 4.474 4.474c0 2.365-1.918 4.283-4.283 4.283s-4.473-2.109-4.473-4.474z"></path>
+                                </svg>
+                            </div>
+                        </button>
+                        <input type="file" class="color-img" style="display: none;">
+                    </div>
+                </form>
+                <div class="search-color-info"></div>
             </div>
         </main>
         <footer class="footer">
@@ -144,6 +164,7 @@
             </div>
         </footer>
     </div>
+    
     <script src="https://unpkg.com/color.js@1.2.0/dist/color.js"></script>
     <script src="./js/script.js"></script>
 </body>
