add search part

--- a/login.html
+++ b/login.html
@@ -2,10 +2,25 @@
 <html dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="title" content="Image Color Palette Extractor">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Image Color Palette Extractor And Ready Palettes with information about each color">
     <meta name="keywords" content="img, image, color, colors, palette, palettes, template, templates, extract,color name, rgb, cmyk, hsl, hex, hsv, xyz, monochromatic, random, analogous, complementary, triadic, tetradic, hot, cold, shades, square, png, svg, css, json">
     <meta name="author" content="Ali Assaf">
+
+    <meta property="og:title" content="Image Color Palette Extractor" />
+    <meta property="og:site_name" content="Image Color Palette Extractor">
+    <meta property="og:type" content="site" />
+    <meta property="og:description" content="Extract colors form an image, there is a ready palette generated automatically, and you can search for a color. Finally you can download the palette and show it's code.">
+    <meta property="og:url" content="https://aliassaf-designer.github.io/image-color-palettes-extractor/" />
+    <meta property="og:image" content="https://up6.cc/2025/04/174479467550981.png" />
+
+    <meta name="twitter:title" content="Image Color Palette Extractor">
+    <meta name="twitter:description" content="Extract colors form an image, there is a ready palette generated automatically, and you can search for a color. Finally you can download the palette and show it's code.">
+    <meta name="twitter:image" content="https://up6.cc/2025/04/174479467550981.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://aliassaf-designer.github.io/image-color-palettes-extractor/" />
+    
     <title>Log In</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
