--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="title" content="Image Color Palette Extractor">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Image Color Palette Extractor And Ready Palettes with information about each color">
     <meta name="keywords" content="img, image, color, colors, palette, palettes, template, templates, extract,color name, rgb, cmyk, hsl, hex, hsv, xyz, monochromatic, random, analogous, complementary, triadic, tetradic, hot, cold, shades, square, png, svg, css, json">
     <meta name="author" content="Ali Assaf">
+
+    <meta property="og:title" content="Image Color Palette Extractor" />
+    <meta property="og:site_name" content="Image Color Palette Extractor">
+    <meta property="og:type" content="site" />
+    <meta property="og:description" content="Extract colors form an image, there is a ready palette generated automatically, and you can search for a color. Finally you can download the palette and show it's code.">
+    <meta property="og:url" content="https://aliassaf-designer.github.io/image-color-palettes-extractor/" />
+    <meta property="og:image" content="https://up6.cc/2025/04/174479467550981.png" />
+
+    <meta name="twitter:title" content="Image Color Palette Extractor">
+    <meta name="twitter:description" content="Extract colors form an image, there is a ready palette generated automatically, and you can search for a color. Finally you can download the palette and show it's code.">
+    <meta name="twitter:image" content="https://up6.cc/2025/04/174479467550981.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://aliassaf-designer.github.io/image-color-palettes-extractor/" />
+    
     <title>Image Color Palette Extractor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
@@ -111,11 +126,11 @@
                 <h2 class="search-title">للبحث عن لون معين:</h2>
                 <form class="form-search">
                     <div class="search">
-                        <input type="text" class="search__input" placeholder="ادخل الاسم او الصورة او RGB او CMYK او غيرها">
+                        <input type="text" class="search__input" placeholder="ادخل القيمة المعبرة عن اللون rgb, hsl, hex, cmyk, ...................">
                         <button class="search__button">
                             <div class="search__icon">
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 20 20">
-                                <title>magnifying-glass</title>
+                                <title>Color Search</title>
                                 <path d="M17.545 15.467l-3.779-3.779c0.57-0.935 0.898-2.035 0.898-3.21 0-3.417-2.961-6.377-6.378-6.377s-6.186 2.769-6.186 6.186c0 3.416 2.961 6.377 6.377 6.377 1.137 0 2.2-0.309 3.115-0.844l3.799 3.801c0.372 0.371 0.975 0.371 1.346 0l0.943-0.943c0.371-0.371 0.236-0.84-0.135-1.211zM4.004 8.287c0-2.366 1.917-4.283 4.282-4.283s4.474 2.107 4.474 4.474c0 2.365-1.918 4.283-4.283 4.283s-4.473-2.109-4.473-4.474z"></path>
                                 </svg>
                             </div>
@@ -124,6 +139,38 @@
                     </div>
                 </form>
                 <div class="search-color-info"></div>
+                <div class="buttons search-color-palette">
+                    <select class="search-type color-info">
+                        <option class="color-info_option" value="">اختر نوع التنسيق</option>
+                        <option class="color-info_option" value="monochromatic">أحادي اللون</option>
+                        <option class="color-info_option" value="random">ألوان عشوائية</option>
+                        <option class="color-info_option" value="analogous">ألوان متماثلة</option>
+                        <option class="color-info_option" value="complementary">ألوان متكاملة</option>
+                        <option class="color-info_option" value="triadic">ألوان ثلاثية</option>
+                        <option class="color-info_option" value="tetradic">ألوان رباعية</option>
+                        <option class="color-info_option" value="hot">ألوان حارة</option>
+                        <option class="color-info_option" value="cold">ألوان باردة</option>
+                        <option class="color-info_option" value="shades">ظلال ألوان</option>
+                        <option class="color-info_option" value="square">ألوان مربعة</option>
+                    </select>
+                    <input type="number" class="search-palettes-num color-info" placeholder="ادخل عدد التنسيقات">
+                    <select class="search-color-num color-info">
+                        <option class="color-info_option" value="">اختر عدد الألوان</option>
+                        <option class="color-info_option" value="2">لونين</option>
+                        <option class="color-info_option" value="3">ثلاثة ألوان</option>
+                        <option class="color-info_option" value="4">أربعة ألوان</option>
+                        <option class="color-info_option" value="5">خمسة ألوان</option>
+                        <option class="color-info_option" value="6">ستة ألوان</option>
+                        <option class="color-info_option" value="7">سبعة ألوان</option>
+                        <option class="color-info_option" value="8">ثمانبة ألوان</option>
+                        <option class="color-info_option" value="9">تسعة ألوان</option>
+                        <option class="color-info_option" value="10">عشرة ألوان</option>
+                    </select>
+                    <input type="submit" value="تأكيد" class="search-submit image-submit">
+                </div>
+                <div class="search-color-template"></div>
+                <div class="search-more-info" dir="ltr"></div>
+                <div class="download-color-palette"></div>
             </div>
         </main>
         <footer class="footer">
@@ -164,7 +211,6 @@
             </div>
         </footer>
     </div>
-    
     <script src="https://unpkg.com/color.js@1.2.0/dist/color.js"></script>
     <script src="./js/script.js"></script>
 </body>
