--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="colors-palettes">
                 <div class="palettes-hero">
-                    <img src="./img/Color Palettes.png" alt="color palette" class="palettes-hero_img">
+                    <img src="./img/Color-Palettes.jpg" alt="color palette" class="palettes-hero_img">
                 </div>
                 <div class="buttons"  id="ready-palettes">
                     <select class="ready-color-type color-info">
