minify css,js and some update

--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl">
+<html dir="rtl" lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="title" content="Image Color Palette Extractor">
@@ -22,7 +22,6 @@
     <meta property="twitter:url" content="https://aliassaf-designer.github.io/image-color-palettes-extractor/" />
     
     <title>About Us</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -38,7 +37,7 @@
                     <li class="list_item"><a href="./about-us.html">عنا</a></li>
                 </ul>
                 <a href="javascript:void(0);" class="burger-icon" onclick="burger_menu()">
-                    <i class="ri-menu-line"></i>
+                    <img src="./img/menu-line.svg" alt="mobile menu" class="ri-menu-line">
                 </a>
             </nav>
         </header>
