colors code copy icon

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <option class="color-info_option" value="5">خمسة ألوان</option>
                         <option class="color-info_option" value="6">ستة ألوان</option>
                         <option class="color-info_option" value="7">سبعة ألوان</option>
-                        <option class="color-info_option" value="8">ثمانبة ألوان</option>
+                        <option class="color-info_option" value="8">ثمانية ألوان</option>
                         <option class="color-info_option" value="9">تسعة ألوان</option>
                         <option class="color-info_option" value="10">عشرة ألوان</option>
                     </select>
@@ -112,7 +112,7 @@
                         <option class="color-info_option" value="5">خمسة ألوان</option>
                         <option class="color-info_option" value="6">ستة ألوان</option>
                         <option class="color-info_option" value="7">سبعة ألوان</option>
-                        <option class="color-info_option" value="8">ثمانبة ألوان</option>
+                        <option class="color-info_option" value="8">ثمانية ألوان</option>
                         <option class="color-info_option" value="9">تسعة ألوان</option>
                         <option class="color-info_option" value="10">عشرة ألوان</option>
                     </select>
@@ -161,7 +161,7 @@
                         <option class="color-info_option" value="5">خمسة ألوان</option>
                         <option class="color-info_option" value="6">ستة ألوان</option>
                         <option class="color-info_option" value="7">سبعة ألوان</option>
-                        <option class="color-info_option" value="8">ثمانبة ألوان</option>
+                        <option class="color-info_option" value="8">ثمانية ألوان</option>
                         <option class="color-info_option" value="9">تسعة ألوان</option>
                         <option class="color-info_option" value="10">عشرة ألوان</option>
                     </select>
